--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,80 +1,67 @@
-.home-page {
-	.text-zone {
-		position: absolute;
-		left: 10%;
-		top: 50%;
-		transform: translateY(-50%);
-		width: 40%;
-		max-height: 90%;
-	}
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+.text-zone {
+	margin-top: 50px;
 	h1 {
-		color: #fff;
-		font-size: 53px;
+		color: #F3F1EB;
+		font-size: 300px;
+		text-align: center;
+		line-height: 90%;
 		margin: 0;
-		font-family: 'Coolvetica';
+		font-family: 'Anton';
 		font-weight: 400;
-
-		&::before {
-			content: "<h1>";
-			font-family: 'La Belle Aurore';
-			color: #ffd700;
-			font-size: 18px;
-			position: absolute;
-			margin-top: -40px;
-			left: 15px;
-			opacity: 0.6;
-		}
-		
-		&::after {
-			content: "<h1>";
-			font-family: 'La Belle Aurore';
-			color: #ffd700;
-			font-size: 18px;
-			position: absolute;
-			margin-top: 18px;
-			margin-left: 20px;
-			animation: fadeIn 1s 1.7s backwards;
-			opacity: 0.6;
-		}
-
-		img {
-			width: 32px;
-			margin-left: 20px;
-			opacity: 0;
-			height: auto;
-			animation: rotateIn 1s linear both;
-			animation-delay: 1.4s;
-		}
+	}
+	
+	h2 {
+		color: #F3F1EB;
+		text-align: center;
+		margin-top: 20px;
+		margin-bottom: 40px;
+		font-weight: 400;
+		font-size: 21px;
+		font-family: Anton;
+		letter-spacing: 3px;
 	}
 }
 
-h2 {
-	color: #8d8d8d;
-	margin-top: 20px;
-	font-weight: 400;
-	font-size: 11px;
-	font-family: sans-serif;
-	letter-spacing: 3px;
-	animation: fadeIn 1s 1.8s backwards;
+.navbar {
+	display: flex;
+  	justify-content: center;
+  	align-items: center;
 }
 
-.flat-button {
-	color: #ffd700;
-	font-size: 13px;
-	font-weight: 400;
-	letter-spacing: 4px;
-	font-family: sans-serif;
-	text-decoration: none;
-	padding: 10px 18px;
-	border: 1px solid #ffd700;
-	margin-top: 25px;
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	display: flex;
+	gap: 10px;
+}
+
+li {
 	float: left;
-	animation: fadeIn 1s 1.8s backwards;
-	white-space: nowrap;
+	display: block;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 20px;
+}
 
-	&:hover {
-		background: #ffd700;
-		color: #333;
-	}
+.nav-button {
+	text-decoration: none;
+	color: white;
+	font-family: "Roboto", sans-serif;
+}
+.resume-button {
+	background-color: #DE5A43;
+	border-radius: 8%;
+}
+
+li:hover:not(.active) {
+	border: 1px solid;
+	border-color: grey;
+	padding: 13px 15px;
+	border-radius: 8%;
 }
