--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -24,13 +24,13 @@
 }
 
 .container {
-	width: 100%;
+	width: 80%;
 	will-change: contents;
-	height: 90%;
+	height: 100%;
 	min-height: 566px;
 	position: absolute;
 	opacity: 0;
-	top: 5%;
+	right: 10%;
 	margin: 0 auto;
 	z-index: 1;
 	transform-style: preserve-3d;
