--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@ html {
 
 body {
   margin: 0;
-  font: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
   color: #444;
-  background: #022c43;
+  background: #1E1E1E;
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
