--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+html { overflow-y: scroll; overflow-x:hidden; }
+
 .text-zone {
 	margin-top: 50px;
 	h1 {
@@ -26,15 +28,27 @@
 }
 
 .navbar {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
 	display: flex;
+
   	justify-content: center;
   	align-items: center;
 }
 
 ul {
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 17px;
+	padding-bottom: 17px;
+	backdrop-filter: blur(10px);
+	-webkit-backdrop-filter: blur(10px);
+
+	box-shadow: inset 0 0 2000px rgba(0, 0, 0, .5);
+	border-radius: 5px;
+
 	list-style-type: none;
-	margin: 0;
-	padding: 0;
 	overflow: hidden;
 	display: flex;
 	gap: 10px;
@@ -57,6 +71,12 @@ li {
 .resume-button {
 	background-color: #DE5A43;
 	border-radius: 8%;
+}
+.home-button {
+	font-family: anton;
+	/* font-size: 20px; */
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 li:hover:not(.active) {
